--- a/Favorite-Toys/app/src/main/res/values/strings.xml
+++ b/Favorite-Toys/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="error_message">
         Failed to get results. Please try again.
     </string>
+    <string name="action_reset">Reset</string>
 </resources>
